# sam3-web-app

./: README.md  run-dev.sh
backend/: pyproject.toml  run-server.sh
backend/examples/: example.ipynb
backend/src/api/: api.py  app.py  inference.py  models.py  state.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: image-canvas.tsx  image-dropzone.tsx  prompt-bar.tsx  results-summary.tsx
frontend/src/hooks/: use-image-upload.ts  use-prediction.ts
frontend/src/lib/: api.ts  types.ts
